Shopify/force-app/main/default/objects/Json_Field_Mapping__c/Json_Field_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Json Field Mapping</label>
</CustomObject>