Shopify/force-app/main/default/objects/Json_Field_Mapping__c/fields/Is_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Is_External_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is External ID</label>
    <type>Checkbox</type>
</CustomField>