Shopify/force-app/main/default/objects/Json_Field_Mapping__c/fields/Is_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Is_Relationship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Relationship</label>
    <type>Checkbox</type>
</CustomField>