Shopify/force-app/main/default/objects/Json_Field_Mapping__c/fields/Json_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Json_Field_Name__c</fullName>
    <label>Json Field Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>